src_old/objects/RetailerServiceEquipment__c.object
<CustomObject>
    <description>Retailer Service Equipment relates Equipment to a Retailer, which determines the Equipment that are available when building a Project Service. Retailer Service Equipment is related to Retailer, Service, and Equipment.</description>
    <fields>
        <fullName>Equipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Equipment</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>Retailer Service Equipment</relationshipLabel>
        <relationshipName>RetailerServiceEquipment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the equipment can be removed from project service</description>
        <inlineHelpText>Locked equipment cannot be deleted at project service level</inlineHelpText>
        <label>Is Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retailer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retailer</label>
        <referenceTo>Retailer__c</referenceTo>
        <relationshipLabel>Retailer Service Equipment</relationshipLabel>
        <relationshipName>RetailerServiceEquipment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service</label>
        <referenceTo>Service__c</referenceTo>
        <relationshipLabel>Retailer Service Equipment</relationshipLabel>
        <relationshipName>RetailerServiceEquipment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <description>Prevents duplicate rows. Used by workflow rule field update.</description>
        <label>UniqueKey</label>
        <length>250</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Retailer Service Equipment</label>
    <nameField>
        <displayFormat>RSE-{0000}</displayFormat>
        <label>Retailer Service Equipment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retailer Service Equipment</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>